# trainingdata-tool

./: CMakeLists.txt  Doxyfile.in  IMPROVEMENTS.md  README.md  verify_chunks.py
.github/workflows/: cmake-multi-platform.yml
src/: Config.cpp  Config.h  PGNGame.cpp  PGNGame.h  StaticEvaluator.h  StockfishEvaluator.cpp  StockfishEvaluator.h  trainingdata-tool.cpp  trainingdata.cpp  trainingdata.h
